--- a/etiquetas_de_enlace.html
+++ b/etiquetas_de_enlace.html
@@ -37,31 +37,31 @@
 		<h3> Parrafo 1 </h3>
 		<p id="parrafo1">
 			En un rincón olvidado del mundo, donde los caminos de tierra se entrelazan como hilos en una antigua alfombra tejida a mano, se encuentra un pequeño pueblo que parece haberse detenido en el tiempo. 
-      Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
-      El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. 
-      Los habitantes, aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. 
-      En este lugar, la vida se mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. 
-      Es un rincón donde el tiempo no corre, sino que camina, dejando huellas profundas en quienes tienen el privilegio de descubrirlo.
+			Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
+			El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. 
+			Los habitantes, aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. 
+			En este lugar, la vida se mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. 
+			Es un rincón donde el tiempo no corre, sino que camina, dejando huellas profundas en quienes tienen el privilegio de descubrirlo.
 		</p>		
 		
 		<h3> Parrafo 2 </h3>
 		<p id="parrafo2">
 			En un rincón olvidado del mundo, donde los caminos de tierra se entrelazan como hilos en una antigua alfombra tejida a mano, se encuentra un pequeño pueblo que parece haberse detenido en el tiempo. 
-      Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
-      El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. Los habitantes, 
-      aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. En este lugar, la vida se 
-      mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. Es un rincón donde el tiempo no corre, sino que camina, dejando huellas 
-      profundas en quienes tienen el privilegio de descubrirlo.
+			Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
+			El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. Los habitantes, 
+			aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. En este lugar, la vida se 
+			mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. Es un rincón donde el tiempo no corre, sino que camina, dejando huellas 
+			profundas en quienes tienen el privilegio de descubrirlo.
 		</p>		
 
 		<h3> Parrafo 3 </h3>
 		<p id="parrafo3">
 			En un rincón olvidado del mundo, donde los caminos de tierra se entrelazan como hilos en una antigua alfombra tejida a mano, se encuentra un pequeño pueblo que parece haberse detenido en el tiempo. 
-      Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
-      El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. Los habitantes,
-      aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. En este lugar, la vida se 
-      mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. Es un rincón donde el tiempo no corre, sino que camina, dejando huellas 
-      profundas en quienes tienen el privilegio de descubrirlo.
+			Las casas, con sus fachadas agrietadas y tejados de tejas rojas, cuentan historias de generaciones que pasaron sus días entre cosechas, cuentos junto al fuego y tardes interminables bajo el sol. 
+			El aire tiene un aroma a tierra húmeda y pan recién horneado, mientras que las campanas de la iglesia marcan las horas con un eco melancólico que se pierde entre las montañas cercanas. Los habitantes,
+			aunque pocos, conservan una sabiduría ancestral que no se encuentra en los libros, sino en las miradas, en los silencios compartidos y en las manos curtidas por el trabajo. En este lugar, la vida se 
+			mueve a otro ritmo, uno más pausado, más humano, donde cada gesto cuenta y cada momento se saborea como un sorbo de vino añejo. Es un rincón donde el tiempo no corre, sino que camina, dejando huellas 
+			profundas en quienes tienen el privilegio de descubrirlo.
 		</p>
 		<hr>
 
@@ -72,6 +72,28 @@
 		<hr>
 
 		<!--Agregar a carpeta archivos un archivo zip y un pdf hacer su redirecciones -->
+		
+		<h2>Tipo de enlace con pdf: </h2>
+		<!--Emlace para visualizar un archivo pdf-->
+		<a href = "assets/archivos/archivopdf.pdf" target="_blank"> ir a archivo pdf </a>
+
+		<hr>
+
+		<!--Emlace para descargar archivo zip-->
+		<h2>Tipo de enlace con zip: </h2>
+		<a href = "assets/archivos/tasmeditor.zip" target="_blank"> ir a archivo zip </a>
+
+		<hr>
+		<!--Emlace para un archivo que no es local-->
+		<h2>Tipo de enlace con archivo exteno: </h2>
+		<a href = "../Compiladores.pdf" target="_blank"> ir a archivo externo </a>
+
+		<hr>
+
+
+
+
+
 
 	</body>
 </html>
