--- a/html_5/Estructura_Grid.html
+++ b/html_5/Estructura_Grid.html
@@ -11,54 +11,61 @@
         <header>
             <h2>Header</h2>
         </header>
+
         <div class="contenido">
             <h1>contenido</h1>
             <p>
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qweqwreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
-                qdsgaffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                wqerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrewwqer
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrewwqerqw
-                qwerqwerqwer
-                qwwwwwwwwwwwwwwwwwwwqer
-                qweqwreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeq
-                qqqqqqqqqqqqqqqwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwweeeeeeeeeeeeeeeeeeeeeeer
-                qewfqw
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
+                <!-- Contenido largo -->
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
             </p>
             <p>
-                asdffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qweqwreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
-                qdsgaffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-                wqerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrewwqer
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrewwqerqw
-                qwerqwerqwer
-                qwwwwwwwwwwwwwwwwwwwqer
-                qweqwreeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeq
-                qqqqqqqqqqqqqqqwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwweeeeeeeeeeeeeeeeeeeeeeer
-                qewfqw
-                qwerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrqrew
+                <!-- Más contenido -->
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+                Lorem ipsum dolor sit amet, consectetur adipiscing elasdassssssssssssssssssssssssssssssssssssss
+                asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddasasd
+            </p>
             </p>
         </div>
+
         <aside>
             <h3>sidebar</h3>
         </aside>
-        <div>
+
+        <div class="widget w1">
             <h3>widget1</h3>
         </div>
-        <div>
+        <div class="widget w2">
             <h3>widget2</h3>
         </div>
-        <div>
+        <div class="widget w3">
             <h3>widget3</h3>
         </div>
 
@@ -66,6 +73,5 @@
             <h3>Footer</h3>
         </footer>
     </div>
-    
 </body>
 </html>
