listo, solo agregar mas java, script

--- a/Proyecto_final/pages/Inicio.html
+++ b/Proyecto_final/pages/Inicio.html
@@ -23,7 +23,7 @@
         <a href="../pages/productos_p.html" class="btn-primary"> Descubrir más</a>
     </header>
     
-    <main>
+    <main id="inicioMain">
         <section id="servicios" class="cards-container">
             <h2>Ofertas Especiales: </h2>
             <div class="cards">
