--- a/Proyecto_final/pages/acerca.html
+++ b/Proyecto_final/pages/acerca.html
@@ -11,6 +11,41 @@
     
     <nav class="Barra_de_navegacion" id="navbar"></nav>
 
+    <main>
+
+        <div class="Informacion">
+            <h1>Acerca de nosotros...</h1>
+            <div class="contenedorInformacion">
+                <p>
+                En Farmacia Santiago, estamos orgullosos de ser una empresa local ubicada en Nuevo Zooquiapam, comprometida con brindar un servicio cálido, confiable y de excelente calidad a toda nuestra comunidad.
+
+                Nos especializamos en la venta de medicamentos generales, ofreciendo atención personalizada y asesoría para que siempre encuentres lo que necesitas para cuidar tu salud. Además, contamos con servicios de papelería, ideales para estudiantes, maestros y familias que requieren materiales escolares o de oficina sin salir del pueblo.
+
+                Trabajamos con el firme propósito de facilitar tu día a día, brindando productos esenciales en un solo lugar y con la atención que te mereces. Cada cliente es importante para nosotros, y por eso nos esforzamos en crear un ambiente de confianza, cercanía y responsabilidad.
+
+                Porque sabemos lo importante que es tener soluciones al alcance, estamos “más cerca de ti”, con precios accesibles, productos de calidad y un trato amable que nos distingue.  
+                </p>
+            </div>
+            <div class="ubicacion">
+                <img src="../assets/zoqui.png">
+            </div>
+        </div>
+        
+
+        <div class="redes-sociales">
+            <h3>Síguenos en redes sociales</h3>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
+            </a>
+            <a href="https://www.tiktok.com/" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/3046/3046122.png" alt="TikTok">
+            </a>
+        </div>
+    </main>
+
     <footer class="footer" id="footer"></footer>
 
 
